--- a/static/stylesheets/projects-style.css
+++ b/static/stylesheets/projects-style.css
@@ -169,9 +169,6 @@ body {
   width: 100vw;
 }
 
-.landscape img{
-  width: 100%;
-}
 
 .dark-back {
   background-color: #fceeff;
@@ -391,6 +388,19 @@ body {
   visibility: hidden!important;
 }
 
+@media only screen and (max-width: 540px) {
+  .landscape img {
+    width: 300%;
+  }
+}
+
+@media only screen and (min-width: 1920px) {
+  .landscape img {
+    width: 100%;
+  }
+}
+
+
 
 
 
@@ -413,6 +423,10 @@ body {
 
   #icon-box {
     width: 50%;
+  }
+
+  .last {
+    margin-top: 0!important;
   }
 
  
